--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
     <div class="flex" id="parent">
-      <div id = "div1" draggable="true" class="image" >Image 1</div>
-      <div id = "div2" draggable="true" class="image" >Image 2</div>
-      <div id = "div3" draggable="true" class="image" >Image 3</div>
-      <div id = "div4" draggable="true" class="image" >Image 4</div>
-      <div id = "div5" draggable="true" class="image" >Image 5</div>
-      <div id = "div6" draggable="true" class="image" >Image 6</div>
+      <div id = "div1" id="drag1" draggable="true" class="image" >Image 1</div>
+      <div id = "div2" id="drag2" draggable="true" class="image" >Image 2</div>
+      <div id = "div3" id="drag3" draggable="true" class="image" >Image 3</div>
+      <div id = "div4" id="drag4" draggable="true" class="image" >Image 4</div>
+      <div id = "div5" id="drag5" draggable="true" class="image" >Image 5</div>
+      <div id = "div6" id="drag6" draggable="true" class="image" >Image 6</div>
     </div>
   </body>
 </html>
